- Added --remove-destination to the 'cp' command in Makefile.

2007-01-08: Version 1.1.1

- Updated for vdr-1.5.0.

2007-05-01: Version 1.1.2

- Fixed opening while replaying (Thanks to Antti Seppälä for reporting this one).

2007-05-15: Version 1.1.3

- Fixed a race condition in cFemonReceiver (Thanks to Reinhard Nissl).

2007-10-14: Version 1.1.4

- Backported from 1.2.2.

2008-01-20: Version 1.1.5

- Updated Italian translation (Thanks to Diego Pierotto).
- Added '-Wno-parentheses' to the compiler options.

2007-08-14: Version 1.2.0

- Updated for vdr-1.5.7.

2007-08-19: Version 1.2.1

- Updated for vdr-1.5.8.

2007-10-14: Version 1.2.2

- Added Spids support.
- Minor OSD layout changes.

2008-01-20: Version 1.2.3

- Updated Italian translation (Thanks to Diego Pierotto).
- Added '-Wno-parentheses' to the compiler options.
- Mapped 'kInfo' as help key in setup menu.

2008-02-18: Version 1.2.4

- Replaced asprintf with cString.
- Updated French translation (Thanks to Michaël Nival).
- Fixed service call with null data.
- Added setup option to use a single 8 bpp OSD area.

2008-03-27: Version 1.6.0

- Updated for vdr-1.6.0.
- Updated Italian translation (Thanks to Diego Pierotto).
- Added ST:TNG theme (Thanks to Fabian Förg).

2008-06-20: Version 1.6.1

- Updated Italian translation (Thanks to Diego Pierotto).
- Fixed a crash if no channel available (Thanks to Winfried Köhler)

2008-10-12: Version 1.6.2

- Converted HISTORY and fi_FI.po to UTF-8.
- Optimized receiver and OSD thread termination.

2008-11-09: Version 1.6.3

- Added initial support for H.264 and HE-AAC.
- Fixed detection of false positives in audio/video streams.
- Refactored source code.

2008-xx-xx: Version 1.6.4

- Added getVideoStream()/getAudioStream()/getAC3Stream() functions.
- Updated Italian translation (Thanks to Diego Pierotto).
- Fixed a memory leak.
- Added a check for the minimum OSD height.
- Replaced "Use single area (8bpp)" option with VDR's "Setup/OSD/Anti-alias".