@@ -318,3 +318,4 @@ VDR Plugin 'femon' Revision History
 - Fixed a memory leak.
 - Added a check for the minimum OSD height.
 - Replaced "Use single area (8bpp)" option with VDR's "Setup/OSD/Anti-alias".
+- Removed the FEMON_NTSC option.
